--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "xyz",
-  "version": "v4.12.1α",
+  "version": "v4.12.1",
   "repository": {
     "type": "git",
     "url": "https://github.com/geolytix/xyz"
