Update actions branches

--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -2,9 +2,9 @@ name: ESLint
 
 on:
   push:
-    branches: [ main ]
+    branches: [ "main", "major", "minor", "patch" ]
   pull_request:
-    branches: [ main ]
+    branches: [ "main", "major", "minor", "patch" ]
 
 jobs:
   eslint:
