--- a/.github/workflows/unit_tests.yml
+++ b/.github/workflows/unit_tests.yml
@@ -2,9 +2,9 @@ name: Codi unit tests
 
 on:
   push:
-    branches: [ main ]
+    branches: [ "main", "major", "minor", "patch" ]
   pull_request:
-    branches: [ main ]
+    branches: [ "main", "major", "minor", "patch" ]
 
 jobs:
   build:
