--- a/.github/workflows/patch-minor-merge.yml
+++ b/.github/workflows/patch-minor-merge.yml
@@ -28,7 +28,7 @@ jobs:
         env:
             TOKEN: ${{ secrets.PAT_TOKEN }}
         run: |
-            git config user.name "GitHub Actions Bot"
+            git config user.name "RobAndrewHurst"
             git config user.email "actions@github.com"
             git config --global url."https://$TOKEN@github.com/".insteadOf "https://github.com/"
 
