--- a/.github/workflows/patch-minor-merge.yml
+++ b/.github/workflows/patch-minor-merge.yml
@@ -29,7 +29,7 @@ jobs:
             TOKEN: ${{ secrets.PAT_TOKEN }}
         run: |
             git config user.name "RobAndrewHurst"
-            git config user.email "actions@github.com"
+            git config user.email "robert.hurst@geolytix.co.uk"
             git config --global url."https://$TOKEN@github.com/".insteadOf "https://github.com/"
 
       - name: Merge patch into minor
