--- a/.github/workflows/patch-minor-merge.yml
+++ b/.github/workflows/patch-minor-merge.yml
@@ -13,39 +13,37 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: write
-
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-        env:
-            PAT_TOKEN: ${{secrets.PAT_TOKEN}}
+
         with:
           fetch-depth: 0
 
-
       - name: Configure Git
-        env:
-            TOKEN: ${{ secrets.PAT_TOKEN }}
         run: |
-            git config user.name "RobAndrewHurst"
-            git config user.email "robert.hurst@geolytix.co.uk"
-            git config --global url."https://$TOKEN@github.com/".insteadOf "https://github.com/"
+          git config user.name "RobAndrewHurst"
+          git config user.email "robert.hurst@geolytix.co.uk"
+          # Set the remote URL with authentication token
 
       - name: Merge patch into minor
+        env:
+          GITHUB_TOKEN: ${{ secrets.PAT_TOKEN }}
         run: |
-            echo "Fetching branches..."
-            git fetch origin
-        
-            echo "Checking out minor branch..."
-            git checkout minor
-            git pull origin minor
-            
-            echo "Attempting merge..."
-            if git merge origin/patch --no-edit; then
-                echo "Merge successful, pushing changes..."
-                git push origin minor
-                echo "Successfully merged patch into minor"
-            else
-                echo "Merge conflicts detected. Manual intervention required."
-                exit 1
-            fi
+          echo "Fetching branches..."
+          git fetch origin
+          
+          echo "Checking out minor branch..."
+          git checkout minor
+          git pull origin minor
+          
+          echo "Attempting merge..."
+          if git merge origin/patch --no-edit; then
+            echo "Merge successful, pushing changes..."
+            # Push using the authenticated remote URL
+            git push origin minor
+            echo "Successfully merged patch into minor"
+          else
+            echo "Merge conflicts detected. Manual intervention required."
+            exit 1
+          fi
