--- a/.github/workflows/patch-minor-merge.yml
+++ b/.github/workflows/patch-minor-merge.yml
@@ -16,11 +16,8 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-        env:
-          GH_TOKEN: ${{ secrets.PAT_TOKEN }}
         with:
           fetch-depth: 0
-          token: ${{ secrets.PAT_TOKEN }}
 
       - name: Configure Git
         env:
@@ -28,6 +25,7 @@ jobs:
         run: |
           git config user.name "RobAndrewHurst"
           git config user.email "robert.hurst@geolytix.co.uk"
+          echo "https://${GH_TOKEN}@github.com" > ~/.git-credentials
           git config --global credential.helper store
 
       - name: Merge patch into minor
