--- a/.github/workflows/patch-minor-merge.yml
+++ b/.github/workflows/patch-minor-merge.yml
@@ -1,51 +1,23 @@
-name: Direct Merge Patch to Minor
+name: patch-merge 
+on: pull_request
 
-on:
-  pull_request:
-    types:
-      - closed
-    branches:
-      - patch
+permissions:
+  contents: write
+  pull-requests: write
 
 jobs:
-  direct-merge:
-    if: github.event.pull_request.merged == true
+  dependabot:
     runs-on: ubuntu-latest
-    permissions:
-      contents: write
+    if: github.event.pull_request.user.login == 'dependabot[bot]' && github.repository == 'owner/my_repo'
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+      - name: Dependabot metadata
+        id: metadata
+        uses: dependabot/fetch-metadata@4c5d6e7f8a9b0c1d2e3f4a5b6c7d8e9f0a1b2c3d
         with:
-          fetch-depth: 0
-
-      - name: Configure Git
+          github-token: "${{ secrets.GITHUB_TOKEN }}"
+      - name: Enable auto-merge for Dependabot PRs
+        if: contains(steps.metadata.outputs.dependency-names, 'minor') && steps.metadata.outputs.update-type == 'version-update:semver-patch'
+        run: gh pr merge --auto --merge "$PR_URL"
         env:
-          GH_TOKEN: ${{ secrets.PAT_TOKEN }}
-        run: |
-          git config user.name "RobAndrewHurst"
-          git config user.email "robert.hurst@geolytix.co.uk"
-          echo "https://${GH_TOKEN}@github.com" > ~/.git-credentials
-          git config --global credential.helper store
-
-      - name: Merge patch into minor
-        env:
-          GH_TOKEN: ${{ secrets.PAT_TOKEN }}
-        run: |
-          echo "Fetching branches..."
-          git fetch origin
-          
-          echo "Checking out minor branch..."
-          git checkout minor
-          git pull origin minor
-          
-          echo "Attempting merge..."
-          if git merge origin/patch --no-edit; then
-            echo "Merge successful, pushing changes..."
-            # Using stored credentials for push
-            git push origin minor
-            echo "Successfully merged patch into minor"
-          else
-            echo "Merge conflicts detected. Manual intervention required."
-            exit 1
-          fi
+          PR_URL: ${{github.event.pull_request.html_url}}
+          GH_TOKEN: ${{secrets.GITHUB_TOKEN}}
