--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
   "scripts": {
     "test": "codi tests",
     "_build": "node esbuild.config.mjs",
-    "_watch": "node esbuild.config.mjs --watch",
-    "version": "node version.js",
+    "browser-sync": "npx browser-sync start --proxy 'localhost:3000' --port 3001 --ui-port 3002 --files 'public/js/lib/**/*' --no-open --no-notify",
+    "ui_css": "npx esbuild --bundle public/css/_ui.css --outfile=public/css/ui.css --loader:.svg=dataurl",
+    "mapp_css": "npx esbuild --bundle public/css/_mapp.css --outfile=public/css/mapp.css",
     "generate-docs": "jsdoc --configure jsdoc_mapp.json --verbose && jsdoc --configure jsdoc_xyz.json --verbose && jsdoc --configure jsdoc_test.json --verbose",
     "mapp-docs": "jsdoc --configure jsdoc_mapp.json --verbose",
     "xyz-docs": "jsdoc --configure jsdoc_xyz.json --verbose",
@@ -31,13 +32,16 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
+    "browser-sync": "^3.0.3",
     "clean-jsdoc-theme": "^4.3.0",
     "codi-test-framework": "^0.0.33",
+    "concurrently": "^9.1.0",
     "cookie-parser": "^1.4.5",
     "dotenv": "^16.4.5",
     "esbuild": "^0.19.11",
     "eslint": "^9.13.0",
     "express": "^4.18.3",
+    "nodemon": "^3.1.7",
     "uhtml": "^3.1.0"
   }
 }
