--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "test-docs": "jsdoc --configure jsdoc_test.json --verbose"
   },
   "license": "MIT",
-  "dependencies": {
+  "optionalDependencies": {
     "@aws-sdk/client-s3": "^3.621.0",
+    "@aws-sdk/s3-request-presigner": "^3.621.0"
+  },
+  "dependencies": {
     "@aws-sdk/cloudfront-signer": "^3.621.0",
-    "@aws-sdk/s3-request-presigner": "^3.621.0",
     "jsonwebtoken": "^9.0.2",
     "nodemailer": "^6.9.7",
     "pg": "^8.7.3",
