--- a/package.json
+++ b/package.json
@@ -22,8 +22,9 @@
   "license": "MIT",
   "optionalDependencies": {
     "@aws-sdk/client-s3": "^3.691.0",
+    "@aws-sdk/cloudfront-signer": "^3.621.0",
     "@aws-sdk/s3-request-presigner": "^3.691.0",
-    "@aws-sdk/cloudfront-signer": "^3.621.0"
+    "@node-saml/node-saml": "^5.0.0"
   },
   "dependencies": {
     "jsonwebtoken": "^9.0.2",
