--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@node-saml/node-saml": "^5.0.0"
   },
   "dependencies": {
+    "express-rate-limit": "^7.5.0",
     "jsonwebtoken": "^9.0.2",
     "nodemailer": "^6.9.7",
     "pg": "^8.13.1",
