Update user update test

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     ]
   },
   "scripts": {
-    "test": "codi tests/mod/user --quiet",
+    "test": "codi tests",
     "_build": "node esbuild.config.mjs",
     "browser-sync": "npx browser-sync start --proxy localhost:3000 --port 3001 --ui-port 3002 --files public/js/**/* --no-open --no-notify",
     "ui_css": "npx esbuild --bundle public/css/_ui.css --outfile=public/css/ui.css --loader:.svg=dataurl",
