--- a/package.json
+++ b/package.json
@@ -6,11 +6,6 @@
     "type": "git",
     "url": "https://github.com/geolytix/xyz"
   },
-  "lint-staged": {
-    "*.{js,mjs,json,css,md}": [
-      "prettier --write"
-    ]
-  },
   "scripts": {
     "test": "node --experimental-test-module-mocks node_modules/codi-test-framework/cli.js tests",
     "test-watch": "node --watch-path=. --experimental-test-module-mocks node_modules/codi-test-framework/cli.js tests --quiet",
@@ -20,8 +15,7 @@
     "generate-docs": "jsdoc --configure jsdoc_mapp.json --verbose && jsdoc --configure jsdoc_xyz.json --verbose && jsdoc --configure jsdoc_test.json --verbose",
     "mapp-docs": "jsdoc --configure jsdoc_mapp.json --verbose",
     "xyz-docs": "jsdoc --configure jsdoc_xyz.json --verbose",
-    "test-docs": "jsdoc --configure jsdoc_test.json --verbose",
-    "prepare": "husky"
+    "test-docs": "jsdoc --configure jsdoc_test.json --verbose"
   },
   "license": "MIT",
   "optionalDependencies": {
@@ -37,20 +31,16 @@
     "simple-statistics": "^7.8.3"
   },
   "devDependencies": {
-    "@eslint/js": "^9.13.0",
+    "@biomejs/biome": "1.9.4",
     "clean-jsdoc-theme": "^4.3.0",
     "codi-test-framework": "1.0.37",
     "concurrently": "^9.1.0",
     "cookie-parser": "^1.4.5",
     "dotenv": "^16.4.5",
     "esbuild": "^0.25.0",
-    "eslint": "^9.13.0",
     "express": "^4.18.3",
     "express-rate-limit": "^7.5.0",
-    "husky": "^9.1.7",
-    "lint-staged": "^15.4.1",
     "nodemon": "^3.1.7",
-    "prettier": "^3.4.2",
     "uhtml": "^3.1.0"
   }
 }
