--- a/biome.json
+++ b/biome.json
@@ -16,6 +16,9 @@
     "bracketSpacing": true,
     "ignore": ["public/css/mapp.css", "public/css/ui.css"]
   },
+  "organizeImports": {
+    "enabled": false
+  },
   "linter": {
     "enabled": true,
     "rules": {
