--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "xyz",
-  "version": "v4.13.0-beta",
+  "version": "v4.13.0",
   "type": "module",
   "repository": {
     "type": "git",
