--- a/package.json
+++ b/package.json
@@ -22,11 +22,11 @@
     "@aws-sdk/client-s3": "^3.691.0",
     "@aws-sdk/cloudfront-signer": "^3.621.0",
     "@aws-sdk/s3-request-presigner": "^3.691.0",
-    "@node-saml/node-saml": "^5.0.1"
+    "@node-saml/node-saml": "^5.0.1",
+    "nodemailer": "^6.9.7"
   },
   "dependencies": {
     "jsonwebtoken": "^9.0.2",
-    "nodemailer": "^6.9.7",
     "pg": "^8.13.1"
   },
   "devDependencies": {
