uhtml static file

--- a/biome.json
+++ b/biome.json
@@ -14,7 +14,7 @@
     "lineWidth": 80,
     "attributePosition": "auto",
     "bracketSpacing": true,
-    "ignore": ["public/css/mapp.css", "public/css/ui.css"]
+    "ignore": ["public/css/mapp.css", "public/css/ui.css", "lib/utils/uhtml.mjs"]
   },
   "organizeImports": {
     "enabled": false
@@ -54,7 +54,8 @@
       "public/js/**/*",
       "docs/**/*",
       "mod/utils/bcrypt.cjs",
-      "tests/**/*"
+      "tests/**/*",
+      "lib/utils/uhtml.mjs"
     ]
   },
   "javascript": {
