--- a/package.json
+++ b/package.json
@@ -39,7 +39,6 @@
     "esbuild": "^0.25.0",
     "express": "^4.18.3",
     "express-rate-limit": "^7.5.0",
-    "nodemon": "^3.1.7",
-    "uhtml": "^3.1.0"
+    "nodemon": "^3.1.7"
   }
 }
