update biome to err for complexity

--- a/biome.json
+++ b/biome.json
@@ -31,7 +31,7 @@
         "noBannedTypes": "error",
         "useOptionalChain": "error",
         "noExcessiveCognitiveComplexity": {
-          "level": "warn",
+          "level": "error",
           "options": {
             "maxAllowedComplexity": 20
           }
