turn off sorted keys until beta release

--- a/biome.json
+++ b/biome.json
@@ -4,7 +4,7 @@
     "actions": {
       "source": {
         "organizeImports": "on",
-        "useSortedKeys": "on"
+        "useSortedKeys": "off"
       }
     },
     "enabled": true
