--- a/.gitignore
+++ b/.gitignore
@@ -9,9 +9,13 @@ env
 package-lock.json
 node_modules/*
 
+public/js/*
 public/css/.sass-cache/
 public/workspaces/*
 public/js/plugins/*
+!public/js/mapbox-gl-rtl-text.js
+!public/dictionaries/*
+
 stats.json
 docs/*
 
@@ -24,12 +28,9 @@ caddy_linux_amd64
 .ebextensions/*
 \.ebextensions/
 
-public/js/*
-!public/js/mapbox-gl-rtl-text.js
-
 *.pem
 *.crt
-*.json
+/*.json
 !tests/*.json
 !tests/**
 !package.json
