pnpm Package Manager 📦 (#2313)
* pnpm init

* update pnpm config

* update pnpm docs and github actions

* update version

* correct link for docs preview

* update docs and version file

---------

Co-authored-by: Rob Hurst <roberthurstsa@gmail.com>
Co-authored-by: AlexGeere <alex.geere@gmail.com>
Co-authored-by: Dennis Bauszus <dennis.bauszus@geolytix.co.uk>
Co-authored-by: Simon Leech <56163132+simon-leech@users.noreply.github.com>

--- a/.gitignore
+++ b/.gitignore
@@ -6,8 +6,14 @@
 .vercel
 
 env
+# npm legacy files (replaced by pnpm)
 package-lock.json
+pnpm-lock.yaml
+yarn.lock
+
+# pnpm files
 node_modules/*
+.pnpm-store/
 
 public/js/*
 public/css/.sass-cache/
