Vercel Sync env & Utilities (#2370)

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 .idea/
 .vscode/
 .env
+.env.*
 .DS_Store
-.sass-cache/
 .vercel
 
 env
@@ -16,23 +16,11 @@ node_modules/*
 .pnpm-store/
 
 public/js/*
-public/css/.sass-cache/
 public/workspaces/*
 public/js/plugins/*
-!public/js/mapbox-gl-rtl-text.js
 !public/dictionaries/*
 
-stats.json
 docs/*
-
-caddy_linux_amd64
-
-# Elastic Beanstalk Files
-.elasticbeanstalk/*
-!.elasticbeanstalk/*.cfg.yml
-!.elasticbeanstalk/*.global.yml
-.ebextensions/*
-\.ebextensions/
 
 *.pem
 *.crt
