--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "nodemailer": "^6.10.0"
   },
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "jsonwebtoken": "^9.0.2",
     "pg": "~8.15.1"
   },
