--- a/biome.json
+++ b/biome.json
@@ -1,5 +1,5 @@
 {
-  "$schema": "https://next.biomejs.dev/schemas/2.0.0-beta/schema.json",
+  "$schema": "https://biomejs.dev/schemas/2.1.3/schema.json",
   "assist": {
     "actions": {
       "source": {
