--- a/biome.json
+++ b/biome.json
@@ -1,5 +1,5 @@
 {
-  "$schema": "https://biomejs.dev/schemas/2.1.3/schema.json",
+  "$schema": "https://biomejs.dev/schemas/2.2.6/schema.json",
   "assist": {
     "actions": {
       "source": {
@@ -42,6 +42,9 @@
   "html": {
     "formatter": {
       "enabled": true
+    },
+    "parser": {
+      "interpolation": true
     }
   },
   "javascript": {
