feature(mails): Replace mailer module with Resend 📩 (#2502)
* resend init

* remove old keys

* fix import orders

* remove old key

* fix replace

* move dependency

* update package.json

* dependency and readme

* remove unnecessary keys

* redirect to template before admin emails

* group admins by language

* update batch emails

* update resend documentation

* add await for batch send

* remove redundant return

* update docs

* add logging to batch emails

---------

Co-authored-by: Rob Hurst <roberthurstsa@gmail.com>
Co-authored-by: Dennis Bauszus <dennis.bauszus@geolytix.co.uk>
Co-authored-by: AlexanderGeere <alex.geere@gmail.com>

--- a/package.json
+++ b/package.json
@@ -28,11 +28,11 @@
     "@aws-sdk/cloudfront-signer": "^3.621.0",
     "@aws-sdk/s3-request-presigner": "^3.691.0",
     "@node-saml/node-saml": "^5.0.1",
-    "nodemailer": "^7.0.9"
+    "resend": "^6.4.2"
   },
   "dependencies": {
-    "dotenv": "^17.2.2",
     "bcrypt": "^6.0.0",
+    "dotenv": "^17.2.2",
     "jsonwebtoken": "^9.0.2",
     "pg": "~8.15.1"
   },
