try xhr and warn on failure to get location.

--- a/biome.json
+++ b/biome.json
@@ -26,7 +26,8 @@
       "!package.json",
       "!jsdoc_mapp.json",
       "!jsdoc_xyz.json",
-      "!jsdoc_test.json"
+      "!jsdoc_test.json",
+      "!**/.vscode"
     ]
   },
   "formatter": {
